Added pom.xml and dependencies. Converted all classes that use JFrame into JavaFX